<resources>
    <string name="app_name">简单记账</string>
    <string name="total_spend_text">账户总览</string>
    <string name="month_spend">本月支出</string>
    <string name="month_income">本月收入</string>
    <string name="total_income">收入</string>
    <string name="total_outcome">支出</string>
    <string name="budget_last">预算剩余</string>
    <string name="view_chart">查看图表分析</string>
    <string name="daily_spend">今日支出</string>
    <string name="spend">支出</string>
    <string name="income">收入</string>
    <string name="budget">请设定您本月的支出预算</string>
    <string name="budget_hint">请输入预算金额</string>

    <string name="out_tx_other">其他</string>
    <string name="out_tx_food">饮食</string>
    <string name="out_tx_traffic">交通</string>
    <string name="out_tx_shop">购物</string>
    <string name="out_tx_clothes">服饰</string>
    <string name="out_tx_necessary">日用品</string>
    <string name="out_tx_somke_wine_tea">烟酒茶水</string>
    <string name="out_tx_water_electricity">水电费</string>
    <string name="out_tx_snacks">零食</string>
    <string name="out_tx_trip">旅游</string>
    <string name="out_tx_cosmetic">化妆品</string>
    <string name="out_tx_phone_bill">话费</string>
    <string name="out_tx_entertainment">娱乐</string>
    <string name="out_tx_study">学习</string>
    <string name="out_tx_medical_treatment">医疗</string>
    <string name="out_tx_game">游戏</string>
    <string name="out_tx_children">孩子</string>
    <string name="out_tx_insurance">保险</string>
    <string name="out_tx_pet">宠物</string>
    <string name="out_tx_fitness">健身</string>
    <string name="out_tx_house">住宅</string>
    <string name="out_tx_relationship">人情往来</string>

    <string name="add_notes">添加备注</string>
    <string name="in_tx_salary">工资</string>
    <string name="in_tx_bonus">奖金</string>
    <string name="in_tx_debt_collection">收债</string>
    <string name="in_tx_second_hand_transaction">二手交易</string>
    <string name="in_tx_gift_cash">礼物礼金</string>
    <string name="in_tx_interest">利息</string>
    <string name="in_tx_borrow">借入</string>
    <string name="in_tx_fund">基金</string>
    <string name="in_tx_part_time">兼职</string>

    <string name="view_month_bill">查看月账单</string>
    <string name="notes">记录</string>
    <string name="bill_detail">账单详情</string>
    <string name="all_spend">共笔支出</string>
    <string name="all_income">共笔收入</string>
    <string name="search_tips">请输入搜索信息</string>
    <string name="search_tips_money">请输入金额</string>
    <string name="search_empty_tips">数据为空，无此类记录～～～</string>
    <string name="comment">备注</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">:</string>

    <string name="search_text">请输入搜索的内容</string>
    <string name="no_text">无此类记录</string>
    <string name="history_text">历史账单</string>
</resources>