<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <NumberPicker
            android:id="@+id/date_year"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:gravity="center_vertical"
            android:text="@string/year"/>

        <NumberPicker
            android:id="@+id/date_month"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.15"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.05"
            android:gravity="center_vertical"
            android:text="@string/month"/>

        <NumberPicker
            android:id="@+id/date_day"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.15"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.05"
            android:gravity="center_vertical"
            android:text="@string/day"/>

        <NumberPicker
            android:id="@+id/date_hour"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.15"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.05"
            android:gravity="center"
            android:text="@string/hour"/>

        <NumberPicker
            android:id="@+id/date_minute"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="0.15"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/date_picker_btn_layout_margin_top">

        <Button
            android:id="@+id/btn_picker_cancel"
            android:layout_width="@dimen/date_picker_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/green"
            android:layout_marginLeft="@dimen/date_picker_btn_margin_left_right"
            android:background="@null"/>

        <Button
            android:id="@+id/btn_picker_confirm"
            android:layout_width="@dimen/date_picker_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/green"
            android:layout_marginLeft="@dimen/date_picker_btn_margin_left_right"
            android:background="@null"/>

    </LinearLayout>
</LinearLayout>