<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    
    <ImageView
        android:id="@+id/iv_budget_dialog_close"
        android:layout_width="50px"
        android:layout_height="50px"
        android:src="@mipmap/ic_close"
        android:layout_marginTop="20px"
        android:layout_marginRight="30px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    
    <TextView
        android:id="@+id/tv_budget_dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/budget"
        android:layout_marginTop="30px"
        app:layout_constraintTop_toBottomOf="@+id/iv_budget_dialog_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_budget_dialog_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="￥"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/et_budget_dialog_money"
        app:layout_constraintBottom_toBottomOf="@+id/et_budget_dialog_money"
        app:layout_constraintRight_toLeftOf="@+id/et_budget_dialog_money"
        app:layout_constraintTop_toBottomOf="@+id/tv_budget_dialog_text" />

    <EditText
        android:id="@+id/et_budget_dialog_money"
        android:layout_width="200px"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:hint="@string/budget_hint"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/tv_budget_dialog_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <requestFocus/>
    </EditText>

    <Button
        android:id="@+id/btn_budget_dialog_confirm"
        android:layout_width="500px"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:background="@drawable/shape_dialog_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_budget_dialog_money"/>

</androidx.constraintlayout.widget.ConstraintLayout>