<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <RelativeLayout
        android:id="@+id/fragment_layou_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp">
        
        <ImageView
            android:id="@+id/fragment_iv_record_type"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_qita"/>

        <TextView
            android:id="@+id/fragment_text_record_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_tx_other"
            android:layout_toRightOf="@+id/fragment_iv_record_type"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:id="@+id/fragment_edit_record_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:inputType="number"
            android:gravity="end"
            android:hint="@string/search_tips_money"
            android:background="@color/white"/>

    </RelativeLayout>

    <View
        android:id="@+id/fragment_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/fragment_layou_top"
        android:background="@color/gray"/>
    
    <GridView
        android:id="@+id/fragment_gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_line"
        android:background="@color/white"
        android:numColumns="5"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"/>
    
    <RelativeLayout
        android:id="@+id/fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fragment_keyboard"
        android:background="@color/white">
        
        <TextView
            android:id="@+id/fragment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/fragment_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/fragment_time"
            android:hint="@string/add_notes"
            android:padding="10dp"/>

    </RelativeLayout>

    <!-- 自定义软键盘 -->
    <android.inputmethodservice.KeyboardView
        android:id="@+id/fragment_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:layout_alignParentBottom="true"
        android:background="#D6D9DE"
        android:keyTextColor="#747474"
        android:keyTextSize="36px"
        android:keyBackground="@drawable/keyboard_key"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:shadowColor="@color/white"
        android:shadowRadius="0.0"/>

</RelativeLayout>